--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heritage Trace - Uncover Your Ancestry's Story</title>
+    <title>Vanshavli</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -982,7 +982,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>©2024 Heritage Trace. All rights reserved. • Built with cutting-edge genetic science</p>
+                <p>©2025 Vanshavli. All rights reserved. • Built with cutting-edge genetic science</p>
             </div>
         </div>
     </footer>
