added video and updated index.html

--- a/index.html
+++ b/index.html
@@ -997,16 +997,14 @@
                     <div class="footer-links">
                         <a href="#">About Us</a>
                         <a href="#">Research</a>
-                        <a href="#">Careers</a>
-                        <a href="#">Press</a>
                     </div>
                 </div>
 
                 <div class="footer-section">
                     <h4>Support</h4>
                     <div class="footer-links">
-                        <a href="#">Help Center</a>
-                        <a href="#">Contact Us</a>
+                        <a href="mailto:dvnsh.work@gmail.com">Contact Us</a>
+
                         <a href="#">Privacy Policy</a>
                         <a href="#">Terms of Service</a>
                     </div>
@@ -1015,9 +1013,10 @@
                 <div class="footer-section">
                     <h4>Connect</h4>
                     <div class="footer-links">
-                        <a href="#">Blog</a>
-                        <a href="#">Community</a>
+
+                        <iframe src="https://vanshavli.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
                         <a href="#">Newsletter</a>
+
                         <a href="#">Social Media</a>
                     </div>
                 </div>
